--- a/pay-fine.css
+++ b/pay-fine.css
@@ -413,8 +413,9 @@ input[type="radio"] {
   }
 
   .pay__fine-heading h1 {
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 26px;
+    margin-bottom: 10px;
   }
 
   .input__form-item {
@@ -452,14 +453,14 @@ input[type="radio"] {
     padding: 30px 20px;
   }
 
-  .pay__fine-heading p {
+  .pay__fine p {
     font-size: 16px;
     line-height: 26px;
   }
 
-  .pay__fine p {
-    font-size: 16px;
-    line-height: 26px;
+  .pay__fine-heading p {
+    font-size: 13px;
+    line-height: 20px;
   }
 
   .input__form-items .input__form-item:nth-child(2) .single__input-wrapper {
@@ -530,10 +531,11 @@ input[type="radio"] {
   }
 
   .note {
-    font-size: 14px !important;
-    line-height: 22px !important;
+    font-size: 12px !important;
+    line-height: 18px !important;
     font-weight: 400 !important;
     margin-top: 5px !important;
+    margin-right: 0 !important;
   }
 
   .application__points,
@@ -578,5 +580,27 @@ input[type="radio"] {
 
   .name__signature .single__input-wrapper .single__input:last-of-type label {
     bottom: -50px;
+  }
+
+  .point__6 .single__input {
+    max-width: 120px;
+  }
+
+  .point__6 .single__input:last-of-type {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .point__6 .check__inputs {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .point__6 .check__inputs .single__input-wrapper {
+    width: 190px;
+  }
+
+  .point__6 .check__inputs > p {
+    max-width: 320px;
   }
 }
